--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.1.1",
+    "@react-navigation/compat": "^5.1.8",
     "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.2.10",
     "axios": "^0.19.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
@@ -19,6 +21,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-qrcode-svg": "^6.0.3",
     "react-native-reanimated": "~1.4.0",
